[package]
name = "arkive"
version = "0.8.13"
edition = "2021"
license = "GPL-3.0-only"

description = "Immutable archive manipulation library."
repository = "https://github.com/MaddieM4/arkive"
readme = "README.md"

[dependencies]
hex = "0.4.3"
lazy-regex = "3.2.0"
memmap = "0.7.0"
serde = { version="1.0.207", features=["derive","rc"] }
serde_json = "1.0.124"
sha2 = "0.10.8"
tempfile = "3.12.0"
